Body overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ ul {
 
 }
 .radio-option-list li {
-
+  position: relative;
 }
 .radio-option-list li .btn-check {
   
